2012-10-14  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/unroll_5.c: New testcase.

2012-10-14  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/52643
	* g++.dg/opt/pr52643.C: New.

2012-10-12  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/54602
	* gcc.target/sh/pr54602-1.c: New.
	* gcc.target/sh/pr54602-2.c: New.
	* gcc.target/sh/pr54602-3.c: New.
	* gcc.target/sh/pr54602-4.c: New.

2012-10-12  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/54680
	* gcc.target/sh/pr54680.c: New.

2012-10-12  Jan Hubicka <jh@suse.cz>

	* gcc.dg/webizer.c: New testcase.

2012-10-12  Janis Johnson  <janisjo@codesourcery.com>

	* gcc.dg/vect/pr48765.c: Skip for conflicting options, don't
	specify -m64.

	* gcc.target/arm/div64-unwinding.c: Skip, don't xfail, for
	GNU/Linux.

	* lib/target-supports.exp (check_effective_target_arm_hard_vfp_ok):
	Return 0 if already specifying -mfloat-abi other than hard.

2012-10-12  Joe Seymour  <jseymour@codesourcery.com>

	* gcc.dg/pr53060.c: Prune irrelevant warning.

2012-10-12  Jakub Jelinek  <jakub@redhat.com>

	PR c/54381
	* c-c++-common/Wsizeof-pointer-memaccess1.c: New test.
	* c-c++-common/Wsizeof-pointer-memaccess2.c: New test.
	* gcc.dg/Wsizeof-pointer-memaccess1.c: New test.
	* gcc.dg/torture/Wsizeof-pointer-memaccess1.c: Test also stpncpy.
	Adjust expected wording of warnings for *cmp* builtins.
	* g++.dg/torture/Wsizeof-pointer-memaccess1.C: Likewise.
	* g++.dg/torture/Wsizeof-pointer-memaccess2.C: Likewise.

2012-10-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/24449
	* g++.dg/parse/friend-main.C: New.

2012-10-12  Marc Glisse  <marc.glisse@inria.fr>

	PR c++/53055
	* g++.dg/pr53055.C: New testcase.

2012-10-12  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/52744
	* g++.dg/cpp0x/pr52744.C: New.

2012-10-12  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/40453
	* gfortran.dg/dummy_procedure_9.f90: New.

2012-10-12  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/54894
	* gcc.dg/torture/pr54894.c: New testcase.
