@@ -1,3 +1,8 @@
+2012-10-14  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/53581
+	* g++.dg/template/crash113.C: New.
+
 2012-10-14  Jan Hubicka  <jh@suse.cz>
 
 	* gcc.dg/unroll_5.c: New testcase.
